--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+#-----------------------------------------
+# Server Setup
+#-----------------------------------------
+server.port=8080
+server.servlet.context-path=/wallet-service/rest
+management.server.port=9001
+management.server.address=127.0.0.1
+management.server.servlet.context-path=/wallet-service/mng
+# ===============================
+# = DATA SOURCE
+# ===============================
 spring.datasource.url=jdbc:h2:file:./db/walleth2db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,8 +17,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 # Enabling H2 Console
 spring.h2.console.enabled=true
-server.port=8080
-server.servlet.context-path=/wallet-service/rest
-management.server.port=9001
-management.server.address=127.0.0.1
-management.server.servlet.context-path=/wallet-service/mng
+
