--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,14 @@
+#-----------------------------------------
+# Test Server Setup
+#-----------------------------------------
+server.port=9000
+server.servlet.context-path=/wallet-service/rest
+management.server.port=9002
+management.server.address=127.0.0.1
+management.server.servlet.context-path=/wallet-service/mng
+# ===============================
+# = DATA SOURCE
+# ===============================
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -5,8 +16,3 @@ spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Enabling H2 Console
 spring.h2.console.enabled=true
-server.port=9000
-server.servlet.context-path=/wallet-service/rest
-management.server.port=9002
-management.server.address=127.0.0.1
-management.server.servlet.context-path=/wallet-service/mng
